kubernetes_configs/texteval-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: texteval-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: texteval
  template:
    metadata:
      labels:
        app: texteval
    spec:
      containers:
        - name: texteval
          image: ki2147/texteval:1.0
          ports:
            - containerPort: 3000
