kubernetes_configs/texteval-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: texteval-service
spec:
  type: ClusterIP
  selector:
    app: texteval
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
